# compose-for-agents

./: .dockerignore  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .yamllint  Dockerfile  Dockerfile.tools  LICENSE.MIT  README.md  Taskfile.yaml  Taskfile.yml  agents.yaml  compose.yaml  docker-bake.hcl  flake.nix  go.mod  go.sum
.github/: ci.yaml
a2a/: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.dmr.yaml  compose.offload.yaml  compose.offload.yml  compose.openai.yaml  compose.yaml  compose.yml  pyproject.toml
adk/: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.gcloudrun.yaml  compose.offload.yaml  compose.openai.yaml  compose.yaml  pyproject.toml  requirements.txt
adk-cerebras/: README.md  compose.yml  pyproject.toml
adk-sock-shop/: .dockerignore  .gitignore  .mcp.env.example  .ruff.toml  CLAUDE.md  Dockerfile  Dockerfile.adk-ui  Makefile  README.md  compose.gcloud.yaml  compose.offload.yaml  compose.sockstore.yaml  compose.yaml  pyproject.toml  shell.nix
agent/: Dockerfile  playground.py  requirements.txt
agent-ui/: Dockerfile
agno/: .gitignore  .mcp.env.example  README.md  Taskfile.yml  agents.yaml  compose.openai.yaml  (+3 more)
agno/agent/: .dockerignore  .gitignore  Dockerfile  playground.py  pyproject.toml
crew-ai/: .dockerignore  .gitignore  Dockerfile  README.md  compose.openai.yaml  compose.yaml  pyproject.toml
crew-ai/src/marketing_posts/: crew.py  main.py  tools.py
crew-ai/src/marketing_posts/config/: input.yaml
langgraph/: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  compose.openai.yaml  compose.yaml  postgres_url  pyproject.toml
(+268 files in other folders)
