[project]
name = "agno-agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.0",
    "fastapi>=0.115.14",
    "mcp>=1.10.1",
    "nest-asyncio>=1.6.0",
    "openai>=1.93.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "ruff>=0.12.0",
    "types-pyyaml>=6.0.12.20250516",
]
